--- a/src/app/components/auth/forgot-password/forgot-password.component.html
+++ b/src/app/components/auth/forgot-password/forgot-password.component.html
@@ -1,1 +1,60 @@
-<p>forgot-password works!</p>
+<app-auth-layout>
+    <form [formGroup]="forgotPasswordForm" (submit)="forgotPassword()">
+      <div class="flex flex-col w-full items-center">
+        <div class="flex flex-col md:w-[100%] items-center">
+          <h1 class="font-bold text-3xl mb-4">Forgot Password</h1>
+          <span class="text-center text-gray-500"
+            >Enter your email to request a password reset</span
+          >
+        </div>
+  
+        <div class="form_div">
+          <label for="">Enter Your Email Address</label>
+          <input
+            required
+            class="border p-3 rounded-md"
+            placeholder="Input Your Email"
+            formControlName="email"
+            type="email"
+            required
+          />
+        </div>    
+        <div class="form_div">
+          <button
+            class="create_button flex justify-center space-x-4 bg-[#0F172A] text-white hover:bg-[#FAFAFA] hover:text-[#0F172A] hover:shadow-lg duration-300"
+            type="submit"
+          >
+            <!-- <div class="animate-spin rounded-full border-t-4 w-8 h-8"></div> -->
+            <span>Forgot Password</span>
+          </button>
+        </div>
+        <div class="mt-3">Or</div>
+        
+        <div
+          class="flex w-full mt-6 justify-center lg:justify-start flex-row space-x-1"
+        >
+          <span class="text-gray-500 font-[400]"> Don't have an account ? </span>
+          <a
+            routerLink="/register"
+            routerLinkActive="active"
+            class="hover:underline font-[500] hover:cursor-pointer"
+            >Create a free account</a
+          >
+        </div>
+        <div
+          class="flex w-full mt-6 justify-center lg:justify-start flex-row space-x-1"
+        >
+          <span class="text-gray-500 font-[400]">
+            Request Email Verification ?
+          </span>
+          <a
+            routerLink="/request-verication"
+            routerLinkActive="active"
+            class="hover:underline font-[500] hover:cursor-pointer"
+            >Request</a
+          >
+        </div>
+      </div>
+    </form>
+  </app-auth-layout>
+  
